# obrc

./: .gitignore  Cargo.toml  README.md  benchies.md  calculate_average.py  calculate_average_python.sh  calculate_average_rust.sh  prepare_python.sh  test.sh
src/: main.rs
