[package]
name = "obrc"
version = "0.1.0"
edition = "2021"

# See morec keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
rayon = "1.10.0"
itertools = "0.12.1"
hashbrown = "0.14.3"
grcov = "0.8.19"
halfbrown = "0.2.5"
fasthash = "0.4.0"
ahash = "0.8.11"

[profile.release]
strip = "none"
lto = true
codegen-units = 1
panic = "abort"
